# mirv-project

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  autodep.mk  autodox.mk  autoexe.mk  autoin.mk  autolib.mk  autosrc.mk  autounit.mk  boost.mk  bootstrap.mk  cautodep.mk  cpatterns.mk  cxxautodep.mk  cxxpatterns.mk  debug.mk  env.bat  env.ps1  lambda.mk  llvm.mk  package.mk  packages.manifest  repositories.manifest  rules.mk  setup.mk  test.mk  top.mk
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
configure/: ar.mk  bind.mk  build_host.mk  cat.mk  cc.mk  compile.mk  configure.mk  cp.mk  cpp.mk  cxx.mk  cxxpp.mk  define.mk  executable.mk  execute.mk  findfile.mk  grep.mk  gxx.mk  host.mk  link.mk  ls.mk  mv.mk  rm.mk  sed.mk  shlib.mk  sort.mk  tee.mk  tool.mk  touch.mk  try.mk  uniq.mk
doc/: ir_notes.txt  mirv.dox.in  target.mk
example/: CMakeLists.txt
libmirv-support/: README.md  manifest
libmirv-support/mirv/support/: buildfile  export.hpp  mirv-support.cpp  mirv-support.hpp  version.hpp.in
libmirv-support/tests/basics/: buildfile  driver.cpp
mirv-project/: README.md  manifest
mirv-project/mirv-project/: .gitignore  buildfile
mirv/docs/: Doxyfile.in  conf.py.in
mirv/examples/: CMakeLists.txt  empty_example.cpp
mirv/include/mirv-project/: mirv-project.hpp
mirv/lib/: mirv-project.cpp
mirv/test/: CMakeLists.txt
mirv/test/source/: mirv-project_test.cpp
mirv/testsuite/lib/: Makefile  expr1.cc  stmt1.cc
src/Core/: target.mk
src/Core/Builder/: AddOperators.cpp  AddOperators.hpp  ArrayTypeGrammar.cpp  ArrayTypeGrammar.hpp  ArrayTypeGrammarFwd.hpp  ArrayTypeRules.hpp  ArrayTypeRulesFwd.hpp  AssignGrammar.cpp  AssignGrammar.hpp  AssignRules.hpp  BinaryOperators.hpp  Builder.cpp  Builder.hpp  CallExpressionGrammar.hpp  CallExpressionRules.hpp  CallStatementGrammar.hpp  ConstantGrammar.cpp  ConstantGrammar.hpp  ConstantGrammarFwd.hpp  ConstantRules.hpp  ConstantRulesFwd.hpp  ConstantSymbolTransforms.cpp  ConstantSymbolTransforms.hpp  ConstructSymbolTransform.hpp  ConstructTransform.cpp  ConstructTransform.hpp  DivideOperators.cpp  DivideOperators.hpp  DoWhileGrammar.hpp  DoWhileGrammarFwd.hpp  DoWhileRules.hpp  DoWhileRulesFwd.hpp  Domain.hpp  DomainFwd.hpp  Expression.hpp  ExpressionGrammar.hpp  ExpressionGrammarFwd.hpp  ExpressionRules.hpp  ExpressionTerminals.hpp  ExpressionTransforms.cpp  (+100 more)
src/Core/Containers/: Map.hpp  MultiMap.hpp  Set.hpp  Vector.hpp
src/Core/Filter/: Action.hpp  AttributeFlow.hpp  AttributeManager.hpp  BackwardControlFlow.hpp  BackwardFlow.hpp  ConstBackwardStatementFlow.hpp  ConstExpressionFlow.hpp  ConstExpressionVisitor.cpp  ConstExpressionVisitor.hpp  ConstExpressionVisitorFwd.hpp  ConstForwardStatementFlow.hpp  ConstStatementFlow.hpp  ConstStatementVisitor.cpp  ConstStatementVisitor.hpp  ConstStatementVisitorFwd.hpp  ConstSymbolFlow.hpp  ConstSymbolVisitor.cpp  ConstSymbolVisitor.hpp  ControlFlow.hpp  ControlVisitor.cpp  ControlVisitor.hpp  Dataflow.cpp  Dataflow.hpp  DataflowFlow.hpp  ExpressionFlow.hpp  ExpressionVisitor.cpp  ExpressionVisitor.hpp  ExpressionVisitorFwd.hpp  Filter.cpp  Filter.hpp  FilterManager.cpp  FilterManager.hpp  FlowAction.hpp  FlowAttributeManager.hpp  ForwardControlFlow.hpp  ForwardFlow.hpp  NodeVisitor.hpp  StatementFlow.hpp  StatementVisitor.cpp  StatementVisitor.hpp  (+9 more)
src/Core/Filter/newexpr/: ExpressionVisitor.hpp  Visitor.hpp
src/Core/IR/: AddressConstant.hpp  AddressConstantFwd.hpp  Arithmetic.hpp  ArithmeticFwd.hpp  ArrayType.cpp  ArrayType.hpp  ArrayTypeFwd.hpp  Attributable.hpp  Attribute.hpp  Base.hpp  Bitwise.hpp  BitwiseFwd.hpp  Constant.hpp  ConstantFwd.hpp  Constants.hpp  Consumer.cpp  Consumer.hpp  Control.cpp  Control.hpp  ControlFwd.hpp  ControlStructure.cpp  ControlStructure.hpp  DataConsumer.hpp  DataProducer.cpp  DataProducer.hpp  Dependence.cpp  Dependence.hpp  Expression.cpp  Expression.hpp  Expression.ipp  ExpressionFwd.hpp  FloatingType.cpp  FloatingType.hpp  FloatingTypeFwd.hpp  Function.cpp  Function.hpp  FunctionFwd.hpp  FunctionType.cpp  FunctionType.hpp  FunctionTypeFwd.hpp  (+65 more)
src/Core/IR/newexpr/: Expression.hpp  Function.hpp  Module.hpp  Node.hpp  Statement.hpp  Table.hpp  Type.hpp
src/Core/Memory/: Heap.hpp
src/Core/Utility/: Cast.hpp  Debug.cpp  Debug.hpp  Printer.cpp  Printer.hpp
src/Filter/Snapshot/Print/: Print.cpp  Print.hpp
src/core/: target.mk
src/core/builder/: Builder.hpp  Domain.hpp  Expression.hpp  Grammar.hpp  Make.hpp  Statement.hpp  Transform.hpp  Translate.hpp  Wrapper.hpp  builder.hh  domain.hh  domain_fwd.hh  expression.hh  grammar.hh  grammar_fwd.hh  make.hh  statement.hh  transform.hh  translate.hh  wrapper.hh
src/core/filter/: Action.hpp  BackwardFlow.hpp  Dataflow.cpp  Dataflow.hpp  ExpressionFlow.hpp  ExpressionVisitor.cpp  ExpressionVisitor.hpp  Filter.hpp  ForwardFlow.hpp  StatementFlow.hpp  StatementVisitor.cpp  StatementVisitor.hpp  SymbolFlow.hpp  SymbolVisitor.cpp  SymbolVisitor.hpp  action.hh  backward_flow.hh  dataflow.cc  dataflow.hh  expression_flow.hh  expression_visitor.cc  expression_visitor.hh  filter.hh  flow.hh  forward_flow.hh  statement_flow.hh  statement_visitor.cc  statement_visitor.hh  symbol_flow.hh  symbol_visitor.cc  symbol_visitor.hh  visitor.cc  visitor.hh
src/core/ir/: Arithmetic.hpp  Attribute.hpp  Bitwise.hpp  BitwiseFwd.hpp  Control.hpp  Expression.cpp  Expression.hpp  Expression.ipp  ExpressionFwd.hpp  Function.hpp  IR.hpp  Inherit.hpp  Logical.hpp  Module.hpp  ModuleFwd.hpp  Mutating.hpp  Node.cpp  Node.hpp  Property.hpp  Reference.hpp  ReferenceFwd.hpp  Relational.hpp  Statement.cpp  Statement.hpp  Statement.ipp  Symbol.cpp  Symbol.hpp  Symbol.ipp  Type.hpp  Variable.hpp  arithmetic.hh  arithmetic_fwd.hh  attribute.hh  base.hh  bitwise.hh  bitwise_fwd.hh  control.hh  control_fwd.hh  expression.cc  expression.hh  (+33 more)
src/core/mem/: heap.hh
src/core/util/: Cast.hpp  Debug.cpp  cast.hh  debug.cc  debug.hh
src/filter/snapshot/print/: Print.cpp  Print.hpp  (+3 more)
src/lib/: Visitor.hpp  inherit.hh  visitor.hh
test/: CMakeLists.txt
testsuite/lib/: stmt1.cc
(+141 files in other folders)
